# IC-Custom

./: .gitignore  LICENSE  MODEL_CARD.md  NOTICE  README.md  README_zh-CN.md  pyproject.toml  requirements.txt
assets/gradio/pos_aware/001/: hypher_params.txt
assets/gradio/pos_aware/002/: hypher_params.txt
assets/gradio/pos_aware/003/: hypher_params.txt
assets/gradio/pos_aware/004/: hypher_params.txt
assets/gradio/pos_aware/005/: hypher_params.txt
assets/gradio/pos_free/001/: hyper_params.json  hypher_params.txt
assets/gradio/pos_free/002/: hyper_params.json  hypher_params.txt
assets/gradio/pos_free/003/: hyper_params.json  hypher_params.txt
assets/gradio/pos_free/004/: hyper_params.json  hypher_params.txt
configs/app/: app.yaml
configs/inference/: inference.yaml  inference_02.yaml
results/app/20250902_1751/: hyper_params_0.json
scripts/app/: run_app.sh
scripts/inference/: download_models.sh  inference.sh
src/app/: APP.md  BEN2.py  app.py  aspect_ratio_template.py  business_logic.py  config.py  constants.py  event_handlers.py  examples.py  metainfo.py  stylesheets.py  ui_components.py  utils.py
src/ic_custom/models/: model.py
src/ic_custom/modules/: autoencoder.py  conditioner.py  image_embedders.py  layers.py  math.py
src/ic_custom/pipelines/: ic_custom_pipeline.py  sampling.py
src/ic_custom/utils/: model_utils.py  process_util.py
src/inference/: download_models.py  inference.py
src/models/: model.py
