[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ic-custom"
version = "0.1.0"
description = "IC Custom package"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Yaowei Li" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ic_custom*"]

